# ACA-Health-Plan-Explorer-for-the-Ohio-Valley

./: .env.example  .gitignore  .mailmap  CLAUDE.md  Procfile  RAILWAY_DEPLOY.md  README.md  extract.py  load.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  seed.py  simple-tests.py  transform.py  validate.py
data/raw_cache/: _counties.json  plans_18019_single_27_400fpl.json  plans_18043_single_27_400fpl.json  (+18 more)
docs/: dashboard.md
raw_cache/: _counties.json  plans_18019_single_27_400fpl.json  plans_18019_single_40_250fpl.json  plans_18043_single_27_400fpl.json  plans_18043_single_40_250fpl.json  plans_18097_single_27_400fpl.json  plans_18097_single_40_250fpl.json  plans_18163_single_27_400fpl.json  plans_18163_single_40_250fpl.json  plans_39035_single_27_400fpl.json  plans_39035_single_40_250fpl.json  plans_39049_single_27_400fpl.json  plans_39049_single_40_250fpl.json  plans_39061_single_27_400fpl.json  plans_39061_single_40_250fpl.json  plans_47037_single_27_400fpl.json  plans_47037_single_40_250fpl.json  plans_47065_single_27_400fpl.json  plans_47065_single_40_250fpl.json  plans_47093_single_27_400fpl.json  plans_47093_single_40_250fpl.json  plans_54011_single_27_400fpl.json  plans_54011_single_40_250fpl.json  plans_54039_single_27_400fpl.json  plans_54039_single_40_250fpl.json  plans_54061_single_27_400fpl.json  plans_54061_single_40_250fpl.json  plans_54099_single_27_400fpl.json  plans_54099_single_40_250fpl.json
tests/: test_smoke.py
tidy/: counties.parquet  issuers.parquet  plan_benefits.parquet  plans.parquet  premium_quotes.parquet
(+29 files in other folders)
